tester/testsuite/good/simple_intarith3.jl
int main() {
  int x = 3;
  int y = 2;
  int z = 10;
  printInt(x * y + z - 9);
  return 0;
}
