tester/testsuite/bad/unreachable.jl
int main () {
  return 1;
  int x = 10;
  return true;
  boolean y = 10;
}
